fix: 업무 목록 조회 N+1 쿼리 최적화
- DB에서 일괄 조회 후 메모리 내에서 Map을 이용해 담당자 매핑